correcao no token finalizada

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_URL=http://localhost:3001
 MONGO_URL=mongodb+srv://bruno:T3sla.lindos@site.j6bsq.gcp.mongodb.net/test
 
-AUTH_SECRET:teslasecret00000265398652356874FFCC5748admin
-SALT_KEY:TESLATOKEN7854-AF58-CCDA-AA98-B85F-FFFF-X854
+AUTH_SECRET=teslasecret00000265398652356874FFCC5748admin
+SALT_KEY=TESLATOKEN7854-AF58-CCDA-AA98-B85F-FFFF-X854
 
 STORAGE_TYPE=s3
 BUCKET_NAME=img-tesla
